src/objects/Post_Surgaory_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Are_Calcifications_Present__c</fullName>
        <label>Are Calcifications Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Post Surgery Summaries</relationshipLabel>
        <relationshipName>Post_Surgery_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calcification_Details__c</fullName>
        <label>Calcification Details</label>
        <picklist>
            <picklistValues>
                <fullName>Benign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invasive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Procedure__c</fullName>
        <label>Date Of Procedure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diameter_of_largest_met__c</fullName>
        <label>Diameter of largest met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Changes_Measurement_Unit__c</fullName>
        <label>Gross Changes Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Mass_Measurement_Unit__c</fullName>
        <label>Gross Mass Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Situ_Disease_At_True_Margin__c</fullName>
        <description>If in situ disease present, is it at the true margin?</description>
        <inlineHelpText>If in situ disease present, is it at the true margin?</inlineHelpText>
        <label>In Situ Disease At True Margin?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Situ_Disease_Present__c</fullName>
        <description>In Situ disease in any of the separately submitted margins?</description>
        <inlineHelpText>In Situ disease in any of the separately submitted margins?</inlineHelpText>
        <label>In Situ Disease Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invasive_CA_at_true_margin__c</fullName>
        <description>If invasive CA is present, is it at the true margin?</description>
        <inlineHelpText>If invasive CA is present, is it at the true margin?</inlineHelpText>
        <label>Invasive CA at true margin?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invasive_CA_present__c</fullName>
        <description>Invasive CA in any of the separately submitted margins?</description>
        <inlineHelpText>Invasive CA in any of the separately submitted margins?</inlineHelpText>
        <label>Invasive CA Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_DCIS_Present__c</fullName>
        <label>Is DCIS Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_LCIS_Present__c</fullName>
        <label>Is LCIS Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_invasive_tumor_present__c</fullName>
        <label>Is invasive tumor present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Largest_Gross_Mass_Measurement_Unit__c</fullName>
        <label>Largest Gross Mass Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lymph_node_dissection_done__c</fullName>
        <label>Lymph node dissection done?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_lymph_nodes_positive__c</fullName>
        <label>Number of lymph nodes positive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Post Surgery Summaries</relationshipLabel>
        <relationshipName>Post_Surgery_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Change__c</fullName>
        <label>Other Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Changes_Present__c</fullName>
        <label>Other Changes Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Changes__c</fullName>
        <label>Other Changes</label>
        <picklist>
            <picklistValues>
                <fullName>Papilloma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radial scar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sclerosing adenosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibroadenoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Tumor_Bed_Area__c</fullName>
        <label>Primary Tumor Bed Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCB_Class__c</fullName>
        <label>RCB Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCB_Overall_Center_Cellularity__c</fullName>
        <label>Overall Center Cellularity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RCB_index__c</fullName>
        <label>RCB index</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Gross_Mass_Height__c</fullName>
        <label>Size of Gross Mass Height</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Gross_Mass_Width__c</fullName>
        <label>Size of Gross Mass Width</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Largest_Gross_Mass_Height__c</fullName>
        <label>Size of Largest Gross Mass Height</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Largest_Gross_Mass_Width__c</fullName>
        <label>Size of Largest Gross Mass Width</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Span_of_gross_changes_height__c</fullName>
        <label>Span of gross changes height</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Span_of_gross_changes_width__c</fullName>
        <label>Span of gross changes width</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Post_Surgery_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surgeon_Other__c</fullName>
        <label>Surgeon Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surgeon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surgeon</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Post Surgery Summaries</relationshipLabel>
        <relationshipName>Post_Surgery_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Examined_Nodes__c</fullName>
        <label>Total Examined Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Positive_Nodes__c</fullName>
        <label>Total Positive Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Span_Measurement_Unit__c</fullName>
        <label>Total Span Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_span_multifocal_gross_mass_height__c</fullName>
        <description>Total span of multifocal gross masses height</description>
        <inlineHelpText>Total span of multifocal gross masses height</inlineHelpText>
        <label>Total span multifocal gross mass height</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_span_multifocal_gross_mass_width__c</fullName>
        <description>Total span of multifocal gross masses width</description>
        <inlineHelpText>Total span of multifocal gross masses width</inlineHelpText>
        <label>Total span multifocal gross mass width</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trial Patient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Post Surgery Summaries</relationshipLabel>
        <relationshipName>Post_Surgery_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tumor_Present__c</fullName>
        <formula>IF(   NOT(ISPICKVAL( Type_Of_Tumor__c , &apos;None Present&apos;))  , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tumor Present</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Tumor__c</fullName>
        <label>Type Of Tumor</label>
        <picklist>
            <picklistValues>
                <fullName>None Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Discrete Mass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifocal Discrete Masses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Stromal Alterations/Fibrosis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pcr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if patient has a pathologic complete response</description>
        <inlineHelpText>Check if patient has a pathologic complete response</inlineHelpText>
        <label>pcr?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>percentage_of_CA_in_Situ_Disease__c</fullName>
        <label>percentage of CA in Situ Disease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pg_PostSurgerysummary_Id__c</fullName>
        <label>pg_PostSurgerysummary_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>separately_submitted_margins__c</fullName>
        <label>separately submitted margins</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Post Surgery Summary</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Surgery Summaries</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_Of_Procedure_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Date_Of_Procedure__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_Of_Procedure__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>